extensions/redis/err.txt
    Checking ranvier-redis v1.0.0-rc.1 (F:\project\ranvier\ranvier-workspace\ranvier\extensions\redis)
error[E0308]: arguments to this method are incorrect
  --> extensions\redis\src\lib.rs:35:14
   |
35 |             .set(key, "locked", expire, options, false)
   |              ^^^
   |
note: expected `Option<Expiration>`, found `Expiration`
  --> extensions\redis\src\lib.rs:35:33
   |
35 |             .set(key, "locked", expire, options, false)
   |                                 ^^^^^^
   = note: expected enum `Option<Expiration>`
              found enum `Expiration`
note: expected `Option<SetOptions>`, found `SetOptions`
  --> extensions\redis\src\lib.rs:35:41
   |
35 |             .set(key, "locked", expire, options, false)
   |                                         ^^^^^^^
   = note: expected enum `Option<SetOptions>`
              found enum `SetOptions`
note: method defined here
  --> C:\Users\realwolf\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\fred-8.0.6\src\commands\interfaces\keys.rs:95:12
   |
95 |   async fn set<R, K, V>(
   |            ^^^
help: try wrapping the expression in `Some`
   |
35 |             .set(key, "locked", Some(expire), options, false)
   |                                 +++++      +
help: try wrapping the expression in `Some`
   |
35 |             .set(key, "locked", expire, Some(options), false)
   |                                         +++++       +

error[E0277]: the trait bound `!: FromRedis` is not satisfied
   --> extensions\redis\src\lib.rs:43:21
    |
 43 |         self.client.del(key).await.map_err(|e| ClusterError::LockReleaseFailed(e.to_string()))?;
    |                     ^^^ the trait `FromRedis` is not implemented for `!`
    |
    = help: the following other types implement trait `FromRedis`:
              ()
              (T1, T2, T3, T4, T5, T6, T7, T8, T9, T10, T11, T12)
              (T10, T11, T12)
              (T11, T12)
              (T12,)
              (T2, T3, T4, T5, T6, T7, T8, T9, T10, T11, T12)
              (T3, T4, T5, T6, T7, T8, T9, T10, T11, T12)
              (T4, T5, T6, T7, T8, T9, T10, T11, T12)
            and 37 others
    = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #148922 <https://github.com/rust-lang/rust/issues/148922> for more information)
    = help: you might have intended to use the type `()` here instead
note: required by a bound in `del`
   --> C:\Users\realwolf\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\fred-8.0.6\src\commands\interfaces\keys.rs:207:8
    |
205 |   async fn del<R, K>(&self, keys: K) -> RedisResult<R>
    |            --- required by a bound in this associated function
206 |   where
207 |     R: FromRedis,
    |        ^^^^^^^^^ required by this bound in `KeysInterface::del`

error[E0599]: no method named `pexpire` found for struct `Arc<fred::clients::RedisClient>` in the current scope
  --> extensions\redis\src\lib.rs:48:21
   |
48 |         self.client.pexpire(key, extra_ttl_ms as i64).await.map_err(|e| ClusterError::Internal(e.to_string()))?;
   |                     ^^^^^^^
   |
help: there is a method `expire` with a similar name
   |
48 -         self.client.pexpire(key, extra_ttl_ms as i64).await.map_err(|e| ClusterError::Internal(e.to_string()))?;
48 +         self.client.expire(key, extra_ttl_ms as i64).await.map_err(|e| ClusterError::Internal(e.to_string()))?;
   |

error[E0282]: type annotations needed
  --> extensions\redis\src\lib.rs:48:9
   |
48 |         self.client.pexpire(key, extra_ttl_ms as i64).await.map_err(|e| ClusterError::Internal(e.to_string()))?;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type

error[E0282]: type annotations needed
  --> extensions\redis\src\lib.rs:48:70
   |
48 |         self.client.pexpire(key, extra_ttl_ms as i64).await.map_err(|e| ClusterError::Internal(e.to_string()))?;
   |                                                                      ^                         - type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
48 |         self.client.pexpire(key, extra_ttl_ms as i64).await.map_err(|e: /* Type */| ClusterError::Internal(e.to_string()))?;
   |                                                                       ++++++++++++

error[E0599]: no variant or associated item named `default` found for enum `SetOptions` in the current scope
  --> extensions\redis\src\lib.rs:63:61
   |
63 |             self.client.set(key, value, expire, SetOptions::default(), false).await
   |                                                             ^^^^^^^ variant or associated item not found in `SetOptions`

error[E0308]: mismatched types
  --> extensions\redis\src\lib.rs:63:41
   |
63 |             self.client.set(key, value, expire, SetOptions::default(), false).await
   |                         ---             ^^^^^^ expected `Option<Expiration>`, found `Expiration`
   |                         |
   |                         arguments to this method are incorrect
   |
   = note: expected enum `Option<Expiration>`
              found enum `Expiration`
note: method defined here
  --> C:\Users\realwolf\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\fred-8.0.6\src\commands\interfaces\keys.rs:95:12
   |
95 |   async fn set<R, K, V>(
   |            ^^^
help: try wrapping the expression in `Some`
   |
63 |             self.client.set(key, value, Some(expire), SetOptions::default(), false).await
   |                                         +++++      +

error[E0599]: no variant or associated item named `default` found for enum `SetOptions` in the current scope
  --> extensions\redis\src\lib.rs:65:59
   |
65 |             self.client.set(key, value, None, SetOptions::default(), false).await
   |                                                           ^^^^^^^ variant or associated item not found in `SetOptions`

error[E0277]: the trait bound `!: FromRedis` is not satisfied
   --> extensions\redis\src\lib.rs:73:21
    |
 73 |         self.client.del(key).await.map_err(|e| ClusterError::Internal(e.to_string()))?;
    |                     ^^^ the trait `FromRedis` is not implemented for `!`
    |
    = help: the following other types implement trait `FromRedis`:
              ()
              (T1, T2, T3, T4, T5, T6, T7, T8, T9, T10, T11, T12)
              (T10, T11, T12)
              (T11, T12)
              (T12,)
              (T2, T3, T4, T5, T6, T7, T8, T9, T10, T11, T12)
              (T3, T4, T5, T6, T7, T8, T9, T10, T11, T12)
              (T4, T5, T6, T7, T8, T9, T10, T11, T12)
            and 37 others
    = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #148922 <https://github.com/rust-lang/rust/issues/148922> for more information)
    = help: you might have intended to use the type `()` here instead
note: required by a bound in `del`
   --> C:\Users\realwolf\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\fred-8.0.6\src\commands\interfaces\keys.rs:207:8
    |
205 |   async fn del<R, K>(&self, keys: K) -> RedisResult<R>
    |            --- required by a bound in this associated function
206 |   where
207 |     R: FromRedis,
    |        ^^^^^^^^^ required by this bound in `KeysInterface::del`

error[E0277]: the trait bound `!: FromRedis` is not satisfied
  --> extensions\redis\src\lib.rs:81:21
   |
81 |         self.client.publish(topic, payload).await.map_err(|e| ClusterError::BusError(e.to_string()))?;
   |                     ^^^^^^^ the trait `FromRedis` is not implemented for `!`
   |
   = help: the following other types implement trait `FromRedis`:
             ()
             (T1, T2, T3, T4, T5, T6, T7, T8, T9, T10, T11, T12)
             (T10, T11, T12)
             (T11, T12)
             (T12,)
             (T2, T3, T4, T5, T6, T7, T8, T9, T10, T11, T12)
             (T3, T4, T5, T6, T7, T8, T9, T10, T11, T12)
             (T4, T5, T6, T7, T8, T9, T10, T11, T12)
           and 37 others
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #148922 <https://github.com/rust-lang/rust/issues/148922> for more information)
   = help: you might have intended to use the type `()` here instead
note: required by a bound in `fred::interfaces::PubsubInterface::publish`
  --> C:\Users\realwolf\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\fred-8.0.6\src\commands\interfaces\pubsub.rs:64:8
   |
62 |   async fn publish<R, S, V>(&self, channel: S, message: V) -> RedisResult<R>
   |            ------- required by a bound in this associated function
63 |   where
64 |     R: FromRedis,
   |        ^^^^^^^^^ required by this bound in `PubsubInterface::publish`

Some errors have detailed explanations: E0277, E0282, E0308, E0599.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `ranvier-redis` (lib) due to 10 previous errors
